--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,8 +39,9 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: outputs
-          base_path:./_posts
+      - name: pages
+           outputs: 
+                base_path: ./_posts
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
