--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,8 +44,8 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        # run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-        run: bundle exec jekyll build --baseurl "./_posts"
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        # run: bundle exec jekyll build --baseurl "./_posts"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
